@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Make default (and preferred) way of using this tool serialized SQL
+			instead of just sql files
        - Add logging with Log::Contextual
 
 0.001000_10 2010-05-18 00:07:31 CST6CDT
